// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trade ship scenarios > a thousand ports each, giant map 1`] = `
{
  "a": {
    "arrivalsPerMinute": 148.1,
    "goldPerMinute": 64840000,
    "shipsArrived": 1481,
    "shipsSent": 1549,
    "tradeGold": 648354681n,
  },
  "b": {
    "arrivalsPerMinute": 143.3,
    "goldPerMinute": 64840000,
    "shipsArrived": 1433,
    "shipsSent": 1548,
    "tradeGold": 648354681n,
  },
  "goldPerTrade": 222500,
}
`;

exports[`trade ship scenarios > across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 5.4,
    "goldPerMinute": 786100,
    "shipsArrived": 27,
    "shipsSent": 30,
    "tradeGold": 3930498n,
  },
  "b": {
    "arrivalsPerMinute": 5.4,
    "goldPerMinute": 786100,
    "shipsArrived": 27,
    "shipsSent": 30,
    "tradeGold": 3930498n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > across the ocean, level-3 port 1`] = `
{
  "a": {
    "arrivalsPerMinute": 13.6,
    "goldPerMinute": 1383000,
    "shipsArrived": 68,
    "shipsSent": 77,
    "tradeGold": 6914765n,
  },
  "b": {
    "arrivalsPerMinute": 5.4,
    "goldPerMinute": 1383000,
    "shipsArrived": 27,
    "shipsSent": 30,
    "tradeGold": 6914765n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > fifty ports each, long route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 85.2,
    "goldPerMinute": 25100000,
    "shipsArrived": 568,
    "shipsSent": 857,
    "tradeGold": 167359802n,
  },
  "b": {
    "arrivalsPerMinute": 85.35,
    "goldPerMinute": 25100000,
    "shipsArrived": 569,
    "shipsSent": 857,
    "tradeGold": 167359802n,
  },
  "goldPerTrade": 147200,
}
`;

exports[`trade ship scenarios > long haul 1`] = `
{
  "a": {
    "arrivalsPerMinute": 3.9,
    "goldPerMinute": 1115000,
    "shipsArrived": 26,
    "shipsSent": 39,
    "tradeGold": 7430748n,
  },
  "b": {
    "arrivalsPerMinute": 3.9,
    "goldPerMinute": 1115000,
    "shipsArrived": 26,
    "shipsSent": 39,
    "tradeGold": 7430748n,
  },
  "goldPerTrade": 142900,
}
`;

exports[`trade ship scenarios > short coastal hop 1`] = `
{
  "a": {
    "arrivalsPerMinute": 5.8,
    "goldPerMinute": 58230,
    "shipsArrived": 29,
    "shipsSent": 30,
    "tradeGold": 291131n,
  },
  "b": {
    "arrivalsPerMinute": 5.8,
    "goldPerMinute": 58230,
    "shipsArrived": 29,
    "shipsSent": 30,
    "tradeGold": 291131n,
  },
  "goldPerTrade": 5020,
}
`;

exports[`trade ship scenarios > ten ports each across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 47.6,
    "goldPerMinute": 8842000,
    "shipsArrived": 238,
    "shipsSent": 280,
    "tradeGold": 44210472n,
  },
  "b": {
    "arrivalsPerMinute": 47.4,
    "goldPerMinute": 8842000,
    "shipsArrived": 237,
    "shipsSent": 279,
    "tradeGold": 44210472n,
  },
  "goldPerTrade": 93070,
}
`;

exports[`trade ship scenarios > ten ports, ~500-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 43.6,
    "goldPerMinute": 9147000,
    "shipsArrived": 218,
    "shipsSent": 270,
    "tradeGold": 45734142n,
  },
  "b": {
    "arrivalsPerMinute": 44.2,
    "goldPerMinute": 9147000,
    "shipsArrived": 221,
    "shipsSent": 271,
    "tradeGold": 45734142n,
  },
  "goldPerTrade": 104200,
}
`;

exports[`trade ship scenarios > ten ports, ~1800-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 31.7,
    "goldPerMinute": 10640000,
    "shipsArrived": 317,
    "shipsSent": 452,
    "tradeGold": 106387400n,
  },
  "b": {
    "arrivalsPerMinute": 31.6,
    "goldPerMinute": 10640000,
    "shipsArrived": 316,
    "shipsSent": 450,
    "tradeGold": 106387400n,
  },
  "goldPerTrade": 168100,
}
`;

exports[`train scenarios > external city in the cluster 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 390000n,
  "aGoldPerMinute": 78000,
  "aSelfTradeGold": 390000n,
  "bExternalTradeGold": 250000n,
  "bGoldDelta": 250000n,
  "trainUnitsSeen": 168,
}
`;

exports[`train scenarios > factory and four cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 240000n,
  "aGoldPerMinute": 48000,
  "aSelfTradeGold": 240000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 168,
}
`;

exports[`train scenarios > factory and one city 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 250000n,
  "aGoldPerMinute": 50000,
  "aSelfTradeGold": 250000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 175,
}
`;

exports[`train scenarios > two factories and two cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 320000n,
  "aGoldPerMinute": 64000,
  "aSelfTradeGold": 320000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 308,
}
`;
